--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,10 +1,3 @@
-<mat-toolbar style="background-color: orange;">
-  <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-  </button>
-  <span>My App</span>
-  <span class="example-spacer"></span>
-  <a routerLink="/login">Login</a>
-  <a>Register</a>
-  <a routerLink="/admin">Admin</a>
-</mat-toolbar>
+<app-header></app-header>
 <router-outlet></router-outlet>
+<app-footer></app-footer>
