--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -1,6 +1,29 @@
-<p>login works!</p>
-<button (click)="login()"></button>
-<button (click)="vratiSveUsere()"></button>
-<button (click)="logout()"></button>
-<button (click)="vratiUseraZaCookie()"></button>
-<button (click)="prikazi()"></button>
+<div>
+  <div style="height: 125px;">
+
+  </div>
+<form  [formGroup]="form" (submit)="login()" autocomplete="new-password">
+    <h1>Login</h1>
+  
+    <div class="form-control">
+      <label for="username">Username</label>
+      <input
+        formControlName="username"
+        id="username"
+        autocomplete="new-password"
+      />
+    </div>
+  
+    <div class="form-control">
+      <label for="password">Password</label>
+      <input
+        formControlName="password"
+        id="password"
+        autocomplete="new-password"
+        type="password"
+      />
+    </div>
+  
+    <button class="btn-book-a-table" type="submit">Login &#8594;</button>
+  </form>
+</div>
