--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -32,55 +32,35 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="#hero">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#menu">Menu</a></li>
-          <li><a href="#events">Events</a></li>
-          <li><a href="#chefs">Chefs</a></li>
-          <li><a href="#gallery">Gallery</a></li>
-          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
-            <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-            </ul>
-          </li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#hero">Glavna</a></li>
+          <li><a href="sviRecepti">Svi Recepti</a></li>
+          
         </ul>
       </nav><!-- .navbar -->
-      <div *ngIf="!authenticated">
+      <div *ngIf="!(isLoggedIn$ | async)">
         <button routerLink="/login" type="button" class="btn-book-a-table">Login</button>
         <button routerLink="/register" type="button" class="btn-book-a-table">Register</button>
       </div>
-      <div  *ngIf="authenticated">
-        <div class="klasadiv rounded-border" style="border: 2px solid black">
-        <div class="circular-image">
-          <img  [src]="imageSrc" alt="Database Image">
-          </div>
-          <!-- <div><button  routerLink="/login" type="button" class="btn-book-a-table" (click)="logout()">Logout</button></div> -->
+      <div *ngIf="isLoggedIn$ | async" class="user-profile">
+        <div class="profile-container">
           
           <div class="dropdown">
-            <button class="dropbtn"><svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512"><path d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"/></svg></button>
+            <button class="dropbtn">
+              <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512">
+                <path d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"/>
+              </svg>
+            </button>
             <div class="dropdown-content">
-                <a href="profile">Profile</a>
-                <a href="#">Item 2</a>
-                <a href="javascript:void(0);" (click)="logout()">Logout</a>
+              <a href="profile">Profile</a>
+              <a href="#">Item 2</a>
+              <a href="javascript:void(0);" (click)="logout()">Logout</a>
             </div>
           </div>
+        </div>
+      </div>       
       </div>
-    </div>
+    
       
-      <button class="d-lg-none"><svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512">
-        <path d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"/></svg> </button>
-    </div>
+      
+  
   </header>
