--- a/frontend/src/app/components/header/header.component.scss
+++ b/frontend/src/app/components/header/header.component.scss
@@ -32,6 +32,9 @@
   /*--------------------------------------------------------------
   # General
   --------------------------------------------------------------*/
+  #header {
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* Adjust the values for a longer shadow */
+  }
   body {
     font-family: var(--font-default);
     color: var(--color-default);
@@ -41,6 +44,11 @@
     color: var(--color-primary);
     text-decoration: none;
   }
+
+  .logo:hover h1 {
+    color: #f39c12 !important; /* Orange color */
+  }
+  
   
   a:hover {
     color: #ec2727;
@@ -63,6 +71,65 @@
     overflow: hidden;
     padding: 80px 0;
   }
+
+  .user-profile {
+  display: flex;
+  align-items: center;
+}
+
+.profile-container {
+  display: flex;
+  align-items: center;
+  margin-right: 20px;
+}
+
+.circular-image {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  overflow: hidden;
+  margin-right: 10px;
+}
+
+.circular-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.dropdown {
+  position: relative;
+}
+
+.dropbtn {
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  top: 100%;
+  right: 0;
+  background-color: #fff;
+  min-width: 160px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  display: block;
+  padding: 10px 15px;
+  text-decoration: none;
+  color: #333;
+}
+
+.dropdown-content a:hover {
+  background-color: #f5f5f5;
+}
   
   .section-bg {
     background-color: #eee;
