--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -8,8 +8,8 @@
           <h2 data-aos="fade-up" style="margin-bottom: 35px;">Recepte </h2>
           <p data-aos="fade-up" data-aos-delay="100">Delimo ukuse i strast kroz autentične recepte. Pridružite nam se u kulinarskom putovanju punom inspiracije i užitka!</p>
           <div class="d-flex" data-aos="fade-up" data-aos-delay="200">
-            <a href="#book-a-table" class="dugme btn-book-a-table ">Book a Table</a>
-            <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
+            <a href="sviRecepti" class="dugme btn-book-a-table ">Pogledaj recepte</a>
+            
           </div>
         </div>
         <div class="col-lg-5 order-1 order-lg-2 text-center text-lg-start">
