--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -1,7 +1,8 @@
 <div>
   <div style="height: 125px;">
-
+    <div *ngIf="isLoading$ | async">Loading..</div>
   </div>
+  
 <form  [formGroup]="form" (submit)="login()" autocomplete="new-password">
     <h1>Login</h1>
   
