--- a/frontend/src/app/components/profile/profile.component.html
+++ b/frontend/src/app/components/profile/profile.component.html
@@ -1,62 +1,81 @@
-<div style="padding-top: 30px;">
-    <div class="container mt-5 d-flex justify-content-center">
-
-        <div class="card p-3">
-
-            <div class="d-flex align-items-center">
-
-                <div class="image">
-            <img [src]="imageSrc" class="rounded" width="155" >
+<div style="margin-top: 60px">
+  <div class="container">
+    <div class="py-5 px-4">
+      <div class="">
+        <div class="bg-white shadow rounded overflow-hidden">
+          <div class="px-4 pt-0 pb-4 cover">
+            <div
+              class="media align-items-end profile-head"
+              style="padding-bottom: 10px"
+            >
+              <div
+                class="profile mr-3"
+                style="display: flex; flex-direction: column"
+              >
+                <img
+                  [src]="imageSrc"
+                  alt="..."
+                  width="130"
+                  class="rounded mb-2 img-thumbnail"
+                /><button href="#" class="btn-book-a-table">
+                  Izmeni profil
+                </button>
+              </div>
+              <div class="media-body mb-5 text-white">
+                <h4 class="mt-0 mb-0">{{ime}} {{prezime}}</h4>
+                <p class="small mb-4">
+                  <i class="fas fa-map-marker-alt mr-2"></i>{{username}}
+                </p>
+              </div>
             </div>
-
-            <div class="ml-3 w-100">
-                
-            <h4 class="mb-0 mt-0">Alex HMorrision</h4>
-            <span>Senior Journalist</span>
-
-            <div class="p-2 mt-2 bg-primary d-flex justify-content-between rounded text-white stats">
-
-                <div class="d-flex flex-column">
-
-                    <span class="articles">Articles</span>
-                    <span class="number1">38</span>
-                    
+          </div>
+          <div class="bg-light p-4 d-flex justify-content-end text-center">
+            <ul class="list-inline mb-0">
+              <li class="list-inline-item">
+                <h5 class="font-weight-bold mb-0 d-block">{{recepti.length}}</h5>
+                <small class="text-muted">
+                  <i class="fas fa-image mr-1"></i>Recepata</small
+                >
+              </li>
+              <li class="list-inline-item">
+                <h5 class="font-weight-bold mb-0 d-block">745</h5>
+                <small class="text-muted">
+                  <i class="fas fa-user mr-1"></i>Followers</small
+                >
+              </li>
+              <li class="list-inline-item">
+                <h5 class="font-weight-bold mb-0 d-block">340</h5>
+                <small class="text-muted">
+                  <i class="fas fa-user mr-1"></i>Following</small
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="px-4 py-3">
+            <h5 class="mb-0">About</h5>
+            <div class="p-4 rounded shadow-sm bg-light">
+              <p class="font-italic mb-0">Web Developer</p>
+              <p class="font-italic mb-0">Lives in New York</p>
+              <p class="font-italic mb-0">Photographer</p>
+            </div>
+          </div>
+          <div class="py-4 px-4">
+            <div class="d-flex align-items-center justify-content-between mb-3">
+              <h5 class="mb-0">Recent photos</h5>
+              <a href="#" class="btn btn-link text-muted">Show all</a>
+            </div>
+            <div class="row">
+                <div style="padding-bottom: 10px;" class="col-lg-6 mb-2 pr-lg-1" *ngFor="let recept of recepti">
+                  <img
+                    [src]="recept.slike[0]"
+                    alt=""
+                    class="img-fluid rounded shadow-sm cropped-image"
+                  />
                 </div>
-
-                <div class="d-flex flex-column">
-
-                    <span class="followers">Followers</span>
-                    <span class="number2">980</span>
-                    
-                </div>
-
-
-                <div class="d-flex flex-column">
-
-                    <span class="rating">Rating</span>
-                    <span class="number3">8.9</span>
-                    
-                </div>
-                
-            </div>
-
-
-            <div class="button mt-2 d-flex flex-row align-items-center">
-
-                <button class="btn btn-sm btn-outline-primary w-100">Chat</button>
-                <button class="btn btn-sm btn-primary w-100 ml-2">Follow</button>
-
-                
-            </div>
-
-
-            </div>
-
-                
-            </div>
-            
+              </div>
+          </div>
         </div>
-        
+      </div>
     </div>
+  </div>
 </div>
-<div style="height: 600px;"></div>
