--- a/frontend/src/app/components/profile/profile.component.scss
+++ b/frontend/src/app/components/profile/profile.component.scss
@@ -1,46 +1,31 @@
-body{
-    
-    background-color:#B3E5FC;
-    border-radius: 10px;
-
+.profile-head {
+  transform: translateY(5rem)
 }
 
-
-.card{
-  width: 400px;
-  border: none;
-  border-radius: 10px;
-   
-  background-color: #fff;
+.cover {
+  background-image: url(https://images.unsplash.com/photo-1530305408560-82d13781b33a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1352&q=80);
+  background-size: cover;
+  background-repeat: no-repeat
 }
 
-
-
-.stats{
-
-      background: #f2f5f8 !important;
-
-    color: #000 !important;
+body {
+  background: #654ea3;
+  background: linear-gradient(to right, #e96443, #904e95);
+  min-height: 100vh;
+  overflow-x:hidden;
 }
-.articles{
-  font-size:10px;
-  color: #a1aab9;
+.btn-book-a-table,
+.header .btn-book-a-table:focus {
+  font-size: 14px;
+  color: #fff;
+  background: #FFA700;
+  padding: 8px 20px;
+  border-radius: 50px;
+  transition: 0.3s;
+  width: 11%;
 }
-.number1{
-  font-weight:500;
-}
-.followers{
-    font-size:10px;
-  color: #a1aab9;
-
-}
-.number2{
-  font-weight:500;
-}
-.rating{
-    font-size:10px;
-  color: #a1aab9;
-}
-.number3{
-  font-weight:500;
+.cropped-image {
+  width: 600px;
+  height: 300px; /* Adjust this value to the desired height */
+  object-fit: cover;
 }
