--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -1,3 +1,4 @@
+<div class="pozadina" style="height: 800px;">
 <div>
   <div style="height: 125px;">
     <div *ngIf="isLoading$ | async">Loading..</div>
@@ -27,4 +28,5 @@
   
     <button class="btn-book-a-table" type="submit">Login &#8594;</button>
   </form>
+</div>
 </div>
