--- a/frontend/src/app/components/register/register.component.html
+++ b/frontend/src/app/components/register/register.component.html
@@ -1,3 +1,4 @@
+<div class="pozadina" style="height: 900px;">
 <div>
   <div style="height: 30px;">
 
@@ -67,4 +68,5 @@
       <div class="progress-text">{{ uploadPercent }}%</div>
     <button class="btn-book-a-table" type="submit">Register &#8594;</button>
   </form>
+</div>
 </div>
