--- a/frontend/src/app/components/register/register.component.scss
+++ b/frontend/src/app/components/register/register.component.scss
@@ -90,3 +90,8 @@
     line-height: 20px;
     color: #ffffff;
   }
+  .pozadina{
+    background-image: url('./../../../assets/img/register.jpg');
+    background-size: cover; /* Optional: Specify how the image should be sized */
+    background-position: center;
+  }
