--- a/frontend/src/app/components/svi-recepti/svi-recepti.component.html
+++ b/frontend/src/app/components/svi-recepti/svi-recepti.component.html
@@ -1,5 +1,5 @@
 
-<div style="padding-top: 130px; justify-content: center;" fxLayout="row wrap" fxLayoutGap="16px">
+<div style="padding-top: 130px; justify-content: center;" fxLayout="row wrap" fxLayoutGap="16px" class="pozadina">
     <div *ngFor="let recept of recepts$ | async" class="recept-card" [routerLink]="['/recept', recept.id]">
         <div class="image-container">
             <img [src]="recept.slike?.[0]" alt="{{ recept.ime }}" />
